2008-09-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h:
	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h:
	* docs/reference/Doxyfile.in:
	* tests/test-font-face.cc: add freetype font support

2008-09-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.cc: use vector::empty() rather than ::size()

2008-09-03  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.cc:
	* cairomm/fontface.h: Add the text_to_glyphs function API to UserFontFace
	* tests/test-font-face.cc: added tests for the new API

2008-08-27  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/cairomm/cairomm.rc.in: Replaced #include "afxres.h" by
	#include <windows.h> which does the job equally well, and allows
	compilation with the freely available Visual Studio Express compiler.
	Bug #17322.

2008-08-24  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/enums.h:
	* cairomm/fontoptions.h: add documentation for all remainting FontOptions API
	and the enums that are used for them

2008-08-24  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/enums.h: add LcdFilter enum
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h: add get/set_lcd_filter() API
	* tests/Makefile.am:
	* tests/test-font-options.cc: Added.
	* .gitignore: ignore new test executable

2008-08-22  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

	* cairomm/context.cc:
	* cairomm/context.h: added Context::show_text_glyphs()
	* cairomm/Makefile.am:
	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h:
	* tests/test-font-face.cc:
	* cairomm/types.h: rearranged some types slightly and moved them to a new file
	since I was getting circular dependencies with a lot of the basic struct types
	that are used by multiple classes

2008-08-22  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

	* cairomm/scaledfont.h: add default value for the font_options parameter of