@@ -1,3 +1,7 @@
+2008-09-10  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>
+
+	* cairomm/cairomm.h: update, add missing includes
+
 2008-09-09  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* cairomm/fontface.cc:
